src/objects/Configuration__c.object
<CustomObject>
    <description>Used to arrange icons on Ecosystem Portal landing page.</description>
    <fields>
        <fullName>ApplicationImageName__c</fullName>
        <formula>Application__r.ImageName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <formula>Application__r.ApplicationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessLinesAvailableTo__c</fullName>
        <label>Business Lines Available To</label>
        <picklist>
            <picklistValues>
                <fullName>AECOM Capital Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Consulting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ConfigurationTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Template</label>
        <referenceTo>Configuration__c</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultSortOrder__c</fullName>
        <label>Default Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeographiesAvailableTo__c</fullName>
        <label>Geographies Available To</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC - ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC - Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC - Southeast Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Middle East</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will Prepopulate on User&apos;s Homepage</inlineHelpText>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRemovable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Removable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTemplateActive__c</fullName>
        <formula>ConfigurationTemplate__r.IsActive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Template Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegionsAvailableTo__c</fullName>
        <label>Regions Available To</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand - (U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building and Places</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Civil &amp; Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global End Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China - (U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation &amp; Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Governments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil, Gas &amp; Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West/Gulf Coast</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserSortOrder__c</fullName>
        <label>User Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>ApplicationName__c</columns>
        <columns>User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>RegionsAvailableTo__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Andrew_s_Apps</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Application__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsHidden__c</columns>
        <columns>IsRemovable__c</columns>
        <columns>IsTemplateActive__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>UserSortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Andrew Smith (Centerstance)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Configuration__c.Application</value>
        </filters>
        <label>Andrew&apos;s Apps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Application_Templates</fullName>
        <columns>NAME</columns>
        <columns>ApplicationName__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsDefault__c</columns>
        <columns>IsHidden__c</columns>
        <columns>IsRemovable__c</columns>
        <columns>IsTemplateActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Configuration__c.ApplicationTemplate</value>
        </filters>
        <label>Application Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brian_s_Apps</fullName>
        <columns>NAME</columns>
        <columns>ApplicationName__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsHidden__c</columns>
        <columns>IsRemovable__c</columns>
        <columns>IsTemplateActive__c</columns>
        <columns>IsDefault__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>UserSortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Brian Jacobi</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Configuration__c.Application</value>
        </filters>
        <label>Brian&apos;s Apps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Michael_s_Apps</fullName>
        <columns>NAME</columns>
        <columns>ApplicationName__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsHidden__c</columns>
        <columns>IsRemovable__c</columns>
        <columns>IsTemplateActive__c</columns>
        <columns>IsDefault__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>UserSortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Michael Lawrence</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Configuration__c.Application</value>
        </filters>
        <label>Michael&apos;s Apps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tree_s_Apps</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Application__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsHidden__c</columns>
        <columns>IsRemovable__c</columns>
        <columns>IsTemplateActive__c</columns>
        <columns>BusinessLinesAvailableTo__c</columns>
        <columns>GeographiesAvailableTo__c</columns>
        <columns>UserSortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Trieste LaPorte</value>
        </filters>
        <label>Trieste&apos;s Apps</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CONFIG-{0000000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>ApplicationTemplate</fullName>
        <active>true</active>
        <label>Application Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report</fullName>
        <active>true</active>
        <label>Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReportTemplate</fullName>
        <active>true</active>
        <label>Report Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_Type_Application_Require_Application</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Application&apos;, ISNULL(Application__c))</errorConditionFormula>
        <errorDisplayField>Application__c</errorDisplayField>
        <errorMessage>Application lookup is required when type is &apos;Application&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Type_Report_Require_Report_Id</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Report&apos;, ISBLANK(ReportId__c))</errorConditionFormula>
        <errorDisplayField>ReportId__c</errorDisplayField>
        <errorMessage>Report Id is required when type is &apos;Report&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Type_Report_Require_Report_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name == &apos;Report&apos;, ISBLANK(ReportName__c))</errorConditionFormula>
        <errorDisplayField>ReportName__c</errorDisplayField>
        <errorMessage>Report Name is required when type is &apos;Report&apos;</errorMessage>
    </validationRules>
</CustomObject>